overlays/Dev/Patch-Redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dev-redis
spec:
  serviceName: redis
  volumeClaimTemplates:
    - metadata:
        name: redis-storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: "ebs-sc"  
        resources:
          requests:
            storage: 1Gi
