overlays/Dev/Patch-resourcelimit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Adservice
  namespace: development
spec:
  template:
    spec:
      containers:
      - name: Adservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Cartservice
  namespace: development
spec:
  template:
    spec:
      containers:
      - name: Cartservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Checkoutservice
  namespace: development
spec:
  template:
    spec:
      containers:
      - name: Checkoutservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Currencyservice
  namespace: development
spec:
  template:
    spec:
      containers:
      - name: Currencyservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Emailservice
  namespace: development
spec:
  template:
    spec:
      containers:
      - name: Emailservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Frontendservice
  namespace: development
spec:
  template:
    spec:
      containers:
      - name: Frontendservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Paymentservice
  namespace: development
spec:
  template:
    spec:
      containers:
      - name: Paymentservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Productcatalogservice
  namespace: development
spec:
  template:
    spec:
      containers:
      - name: Productcatalogservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: Recommendationservice
  namespace: development
spec:
  template:
    spec:
      containers:
      - name: Recommendationservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
  namespace: development
spec:
  template:
    spec:
      containers:
      - name: shippingservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
