overlays/Dev/cartservice-Limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
  namespace: development
  labels:
    app: dev-cartservice
spec:
  template:
    spec:
      containers:
      - name: cartservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
