overlays/Dev/currencyservice-Limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-currencyservice
  namespace: development
  labels:
    app: currencyservice
spec:
  template:
    spec:
      containers:
      - name: currencyservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
