overlays/Dev/emailservice-Limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-emailservice
  namespace: development
  labels:
    app: emailservice
spec:
  template:
    spec:
      containers:
      - name: emailservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
