overlays/Dev/frontendservice-Limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-frontendservice
  namespace: development
  labels:
    app: frontendservice
spec:
  template:
    spec:
      containers:
      - name: frontendservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
