overlays/Dev/paymentservice-Limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
  namespace: development
  labels:
    app: dev-paymentservice
spec:
  template:
    spec:
      containers:
      - name: paymentservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
