overlays/Dev/productcatalogservice-Limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice
  namespace: development
  labels:
    app: dev-productcatalogservice
spec:
  template:
    spec:
      containers:
      - name: productcatalogservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
