overlays/Dev/recommendationservice-Limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Recommendationservice
  namespace: development
  labels:
    app: dev-Recommendationservice
spec:
  template:
    spec:
      containers:
      - name: Recommendationservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
