overlays/Dev/redis-statefulset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-service
  namespace: development
  labels:
    app: dev-redis
spec:
  template:
    spec:
      containers:
      - name: redis
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
