overlays/Dev/shippingservice-Limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-shippingservice
  namespace: development
  labels:
    app: shippingservice
spec:
  template:
    spec:
      containers:
      - name: shippingservice
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
